--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "grunt-contrib-clean": "0.3.1",
         "grunt-coffeelint": "0.0.3",
         "supervisor": "0.5.0",
-        "jasmine-node":"1.0.26",
-        "grunt-jasmine-node":"0.0.2"
+        "mocha":"1.6.0",
+        "grunt-mocha-test":"0.0.1"
     },
 
     "analyse": true,
